--- a/theme/Barracks/admin/ui/cocker/admin.less
+++ b/theme/Barracks/admin/ui/cocker/admin.less
@@ -1,6 +1,5 @@
 @import "../AXUtils";
 
-
 // Global Preset //////////////////
 @color		:#a6a6a6; 		//Light Gray
 @color-a	:#444;			//Dark Gray
@@ -17,15 +16,13 @@
 @border		:1px solid #d9d9d9;		//Light Gray
 @border-a	:3px solid #858585; 	//Profile border Gray
 @border-b	:1px solid #e2e2e2; 	//Box border line Gray
+@border-c	:1px solid #858585; 	//Box border line Gray
 
 @wide:		~"(min-width:1151px)";
 @desktop:   ~"only screen and (min-width: 1024px) and (max-width: 1151px)";
 @tablet:    ~"only screen and (min-width: 767px) and (max-width: 1024px)";
 @mobile:	~"(max-width: 767px)";
 @formMobile: ~"(max-width: 500px)";
-
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans|Nunito);
 
 .H10		{font-size:1px; height:10px;}
 .H20		{font-size:1px; height:20px;}
@@ -37,15 +34,15 @@
 .H80		{font-size:1px; height:80px;}
 .H90		{font-size:1px; height:90px;}
 .H100		{font-size:1px; height:100px;}
+.ax-sub-title{border-bottom: 1px solid #e2e2e2;}
 .ax-align-left{text-align: left;}
 .ax-align-center{text-align: center;}
 .ax-align-right{text-align: right;}
 html, body	{
 	background: @bgcolor-a; color:@color; height:100%; margin:0px; padding:0px;-webkit-text-size-adjust:none;
-	font-family	:"Nanum Gothic", "Apple SD Gothic Neo", "Open sans", "Meiryo";
+	font-family	:"Nanum Barun Gothic", "Apple SD Gothic Neo", "Open sans", "Meiryo";
 	font-size	:12px;
 }
-
 a{
 	color:@color-a;
 	text-decoration: none;
@@ -99,9 +96,18 @@ a{
 	}
 }
 
+.AXTree_none .AXTreeScrollBody{
+	border:0px none;
+	border-top:@border-b;
+}
+.cm-s-eclipse {
+	line-height: 1.8em;
+}
+
+
 #AXPage{
 
-	font-family	:"Nanum Gothic", "Apple SD Gothic Neo", "Open sans", "Meiryo";
+	font-family	:"Nanum Barun Gothic", "Apple SD Gothic Neo", "Open sans", "Meiryo";
 	font-size	:12px;
 
 	.ax-wrap 	{margin:0px auto;}
@@ -130,19 +136,11 @@ a{
 		height:60px;
 		position: fixed; width:100%;
 		background: @bgcolor;
-		opacity: 0.9;
+		opacity: 0.95;
 
 		.ax-logo{
 			position: absolute;
-			img{
-				vertical-align: middle;
-				border:0px none;
-			}
-			a{
-				color:@color;
-				vertical-align: middle;
-				text-decoration: underline;
-			}
+			line-height:45px;margin-top:0px;
 		}
 
 		.ax-top-menu{
@@ -277,17 +275,19 @@ a{
 			.util-border-radius(6px, 6px, 6px, 6px);
 			.util-drop-shadow (0px, 0px, 2px, 0, 0.05);
 
-			h1{font-size:20px; color:@color-a; font-weight: normal; margin:10px 0px; padding:0px 0px;}
+			h1{
+				position: relative;
+				display: block;
+				font-size:20px; color:@color-a; font-weight: normal; margin:10px 0px; padding:0px 0px;
+				.more		{
+					font-size: 14px;
+					float: right;
+				}
+			}
 			p{font-size:12px; line-height:1.6em;color:@color-a; font-weight: normal; margin:10px 0px; padding:0px;}
 
 			&.sample-01{
 				.caution 	{color:@color-c;}
-				.more		{
-					color:@color-b;
-					&:hover, &:focus{
-						text-decoration: underline;
-					}
-				}
 				ul{
 					list-style: none; margin:0px; padding:0px;
 					li{
@@ -298,8 +298,17 @@ a{
 				}
 			}
 
+			.ax-content-toolbox{
+				padding:4px 5px;line-height:36px;
+				border-bottom:@border-b;
+			}
+
 			.ax-box-wrap{
 				margin:20px;
+			}
+
+			.ax-tab{
+				margin: 10px;
 			}
 
 			/* 페이지 검색바 */
@@ -324,7 +333,7 @@ a{
 		.ax-content{
 			float:none;
 			width:auto;
-			padding-left:200px;
+			padding-left:250px;
 			&.expand{
 				padding-left:0px;
 			}
@@ -335,9 +344,9 @@ a{
 	/* 페이지 좌측 메뉴용 */
 	.ax-aside{
 		position: absolute;
-		width:200px;left: 0px;top:130px;
+		width:260px;left: 0px;top:130px;
 		padding-bottom:50px;
-		z-index:2000;
+		z-index:200;
 
 		.ax-aside-menu-box{
 			position: absolute;
@@ -351,14 +360,17 @@ a{
 				color:@color-d;
 				margin-left:10px;
 				text-align: center;
-				.fa-angle-double-right{display: none;}
-				.fa-angle-double-left{display: inline;}
+				.axi{
+					font-size:20px;line-height: 32px;
+				}
+				.axi-angle-double-right{display: none;}
+				.axi-angle-double-left{display: inline;}
 				&:hover, &:focus{
 					background: @bgcolor-d;
 				}
 				&.on{
-					.fa-angle-double-right{display:inline;}
-					.fa-angle-double-left{display: none;}
+					.axi-angle-double-right{display:inline;}
+					.axi-angle-double-left{display: none;}
 				}
 			}
 		}
@@ -400,6 +412,14 @@ a{
 					color:@color-a;
 					font-weight: normal;
 					text-align: center;
+					a{
+						margin:0px 5px;
+						cursor: pointer;
+						&.on{
+							color:@color-b;
+							font-weight:bold;
+						}
+					}
 				}
 				.ax-aside-ul{
 					list-style: none;
@@ -417,10 +437,12 @@ a{
 						}
 					}
 				}
+				.ax-aside-page{
+					//display: none;
+				}
 			}
 		}
 	}
-
 	.ax-footer{
 		z-index:200;
 		height:40px; position: fixed; width: 100%; bottom:0px;
@@ -443,7 +465,8 @@ a{
 	//Login Page...
 	&.login{
 		.ax-title{
-			height: 50px;overflow: hidden;
+			height: 50px;
+			overflow: hidden;
 			padding:20px;
 			h1{
 				display:block;height: 30px;line-height:30px;float: none;
@@ -457,7 +480,6 @@ a{
 		}
 		.ax-box{
 			width:300px;margin:0px auto;
-
 			h1	{text-align: center; color:@color-a; font-weight: normal;}
 			p	{text-align: center; color:@color; margin:0px;}
 			.ax-input	{
@@ -465,6 +487,7 @@ a{
 				padding:4px 20px;
 				.name 	{display: none;}
 				.AXInput	{width:100px; width:100%; height:40px; padding:0px; text-indent: 10px;}
+				.AXSelect	{width:100px; width:100%; height:40px; padding:0px; text-indent: 10px;}
 			}
 			.ax-funcs{
 				padding:4px 20px;
@@ -480,9 +503,9 @@ a{
 			.ax-opts{
 				padding:20px;
 				border-top:@border-b;
+				text-align: center;
 				button{
-					padding:0px !important;
-					width: 100%;
+
 				}
 			}
 		}
@@ -493,22 +516,54 @@ a{
 		height: 40px;overflow: hidden;
 		padding:10px;
 		h1{
-			display:block;height: 24px;line-height:24px;float: none;
+			display:block;height: 24px;line-height:40px;float: none;
 			font-size:20px; font-weight: normal; color:@color-a; text-align: center;
 			margin:0px; padding:0px;
 		}
 		.desc{
+			display: none;
 			display:block;height: 16px;line-height:16px;float: none;
-			color:@color-a; text-align: center; margin:0px 0px 0px 10px; padding:0px;
+			color:@color-a; text-align: center; margin:0px 0px 0px 0px; padding:0px;
+		}
+	}
+	.ax-modal-sub-header{
+		padding:10px;
+		h1, h2, h3{
+			display:block;height: 18px;line-height:18px;float: none;
+			font-size:16px; font-weight: normal; color:@color-a; text-align: left;
+			margin:0px; padding:0px;
+		}
+		.desc{
+			display:block;height: 16px;line-height:16px;float: none;
+			color:@color-a; text-align: center; margin:0px 0px 0px 0px; padding:0px;
 		}
 	}
 	.ax-modal-body{
 		margin: 0px 10px;
-		min-height:100px;
+		min-height:150px;
 		background:@bgcolor;
 		border:@border-b;
 		.util-border-radius(6px, 6px, 6px, 6px);
 		.util-drop-shadow (0px, 0px, 2px, 0, 0.05);
+
+		H3{
+			color:#616161;
+			margin:10px 10px;
+		}
+
+		.tree-in-form{
+			height:400px;
+			border:@border-c;
+			border-radius:4px;
+		}
+		.form-in-form{
+			border:@border-b;
+			border-radius:4px;
+		}
+		.buttons-in-form{
+			padding:5px;
+		}
+
 	}
 	.ax-modal-footer{
 		padding:10px;
@@ -524,10 +579,15 @@ a{
 	}
 }
 
-
 // 반응형 폼 서식
 .ax-rwd-table {
 	position: relative;
+
+	.table-title{
+		border-bottom:1px solid #e2e2e2;
+		clear: both;
+	}
+
 	.item-group {
 		position: relative;
 		min-height: 40px;
@@ -546,7 +606,7 @@ a{
 			padding: 0px;
 			text-align: center;
 			position: relative;
-			.item-lable, .item-label {
+			.item-lable {
 				position: relative;
 				display: table-row;
 				*display: block;
@@ -577,6 +637,7 @@ a{
 					*line-height: 30px;
 					box-sizing: content-box;
 					vertical-align: middle;
+					text-align:left;min-width: 320px;
 					&.selectBox {
 						*padding-top: 7px;
 						*height: 28px;
@@ -604,9 +665,9 @@ a{
 			}
 
 			&:first-child, &.first-child{
-				.item-lable, .item-label {
+				.item-lable {
 					span.th {
-						border-left: none;
+						//border-left: none;
 					}
 				}
 			}
@@ -617,7 +678,7 @@ a{
 				float:none;
 				clear:both;
 				width:100%;
-				.item-lable, .item-label {
+				.item-lable {
 					position: relative;
 					display: table-row;
 					float: none;
@@ -638,21 +699,21 @@ a{
 			}
 
 			&.rightPadding0 {
-				.item-lable, .item-label {
+				.item-lable {
 					span.td {
 						padding-right: 0px;
 					}
 				}
 			}
 			&.leftPadding0 {
-				.item-lable, .item-label {
+				.item-lable {
 					span.td {
 						padding-left: 0px;
 					}
 				}
 			}
 			&.padding0 {
-				.item-lable, .item-label {
+				.item-lable {
 					span.td {
 						padding: 5px 0px
 					}
@@ -714,6 +775,7 @@ a{
 				}
 			}
 		}
+
 		.ax-body{
 			.ax-title{
 				h1{
@@ -730,13 +792,15 @@ a{
 			}
 		}
 		.ax-aside{
-
+			height:0px;
+			padding-bottom: 0px;
 		}
 	}
 
 }
 
 @media @mobile {
+
 	#AXPage{
 
 		.ax-wrap 	{margin:0px auto;}
@@ -768,6 +832,11 @@ a{
 				top:0px; left:0px;
 				width:100%;
 				text-align: center;
+				a#logo-icon{
+					display:block;
+					margin:0px auto;
+					width:193px;height:60px;
+				}
 			}
 			.ax-top-menu{
 				display: none;
@@ -776,6 +845,7 @@ a{
 				float: left;
 				line-height: 60px;
 				padding-left:10px;
+				padding-top:5px;
 			}
 			.ax-loginfo{
 				display: none;
@@ -788,6 +858,9 @@ a{
 
 			.mx-menu-button{
 				font-size:30px;
+				&#mx-aside-menu-handle{
+					margin-left:10px;
+				}
 				&:hover,&:focus{
 					color:@color-b;
 				}
@@ -806,7 +879,7 @@ a{
 				}
 				.desc{
 					display:block;height: 20px;line-height:20px;float: none;
-					color:@color-a; text-align: center; margin:0px 0px 0px 10px; padding:0px;
+					color:@color-a; text-align: center; margin:0px 0px 0px 0px; padding:0px;
 				}
 				.expand{
 					h1 {
@@ -832,22 +905,78 @@ a{
 					margin: 10px 3px 3px 3px;
 				}
 			}
-
 		}
+
+
 		.ax-aside{
 			display: none;
+			&.ax-aside-open{
+				position: absolute;
+				width:100%;height:auto;
+				left: 0px;top:62px;
+				padding-bottom:50px;
+				z-index:200;
+				display:block;
+				.ax-aside-menu-box{
+					display:none;
+				}
+			}
 		}
+
 		.ax-footer{
 			display: none;
 		}
-
 		&.login{
 			.ax-box {
 				width: auto;
 				margin: 0px auto;
 			}
 		}
+
+		// modal page
+		.ax-modal-header{
+			height: 40px;overflow: hidden;
+			padding:10px;
+			h1{
+				display:block;height: 24px;line-height:40px;float: none;
+				font-size:20px; font-weight: normal; color:@color-a; text-align: center;
+				margin:0px; padding:0px;
+			}
+			.desc{
+				display:none;height: 16px;line-height:16px;float: none;
+				color:@color-a; text-align: center; margin:0px 0px 0px 0px; padding:0px;
+			}
+		}
+		.ax-modal-body{
+			margin: 0px 10px;
+			.tree-in-form{
+				height:300px;
+				margin:0px 5px;
+			}
+			.form-in-form{
+				border:@border-b;
+				border-radius:4px;
+				margin:0px 5px;
+			}
+			.buttons-in-form{
+				padding:5px;
+			}
+
+		}
+		.ax-modal-footer{
+			padding:10px;
+			.ax-unit.left{
+
+			}
+			.ax-unit.center{
+				text-align: center;
+			}
+			.ax-unit.right{
+				text-align: right;
+			}
+		}
 	}
+
 }
 
 @media @formMobile {
@@ -869,7 +998,7 @@ a{
 				padding:0px;
 				text-align:left;
 				position:relative;
-				.item-lable, .item-label{
+				.item-lable{
 					position:relative;
 					display:block;float:left;
 					span.th{
@@ -890,6 +1019,7 @@ a{
 						box-sizing: content-box;
 						vertical-align: middle;
 						text-align:left;
+						min-width: 100px;
 						select{
 							box-sizing: border-box;
 							height: 25px;margin: 0px;
@@ -899,22 +1029,22 @@ a{
 					}
 				}
 				&.secondItem{
-					.item-lable, .item-label{
+					.item-lable{
 						span.th{border-left:none};
 					}
 				}
 				&.rightPadding0{
-					.item-lable, .item-label{
+					.item-lable{
 						span.td{padding-right:0px;}
 					}
 				}
 				&.leftPadding0{
-					.item-lable, .item-label{
+					.item-lable{
 						span.td{padding-left:0px;}
 					}
 				}
 				&.padding0{
-					.item-lable, .item-label{
+					.item-lable{
 						span.td{padding:5px 0px}
 					}
 				}
@@ -931,3 +1061,34 @@ a{
 	}
 
 }
+
+
+/* custome area */
+
+.AXButton{
+	.axi{
+		font-size: 15px;
+		line-height: inherit;
+		display: block;float:left;
+		margin-right:3px;
+	}
+}
+
+.AXTree_none{
+	.bodyNodeIcon.userHtml{
+		.axi{
+			font-size:14px;
+			line-height: inherit;
+		}
+	}
+}
+
+.ax-top-menu.AXMenuBox{
+	.axi{
+		font-size:14px;
+		line-height: inherit;
+	}
+}
+
+.W350{width:350px;}
+.W400{width:400px;}
